타이틀수정
컴퍼니를 글로벌로 수정

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>연우컴퍼니 방문을 환영합니다.</title>
+  <title>연우글로벌 방문을 환영합니다.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
