--- a/product.html
+++ b/product.html
@@ -115,13 +115,16 @@
                   <a href="#" class="active" data-filter="*">All</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".development">컵</a>
+                  <a href="#" data-filter=".book">자석 <small>(냉장고, 액자, 책갈피외)</small></a>
+                </li>
+                  <li>
+                  <a href="#" data-filter=".cup">컵</a>
                 </li>
                 <li>
                   <a href="#" data-filter=".design">가방</a>
                 </li>
                 <li>
-                  <a href="#" data-filter=".photo">자석</a>
+                  <a href="#" data-filter=".etc">기타</a>
                 </li>
               </ul>
             </div>
@@ -129,7 +132,7 @@
         </div>
         <div class="awesome-project-content">
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design development">
+          <div class="col-md-4 col-sm-4 col-xs-12 book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/book/book_20190502_170324_14.jpg" alt="" /></a>
@@ -146,7 +149,7 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/book/book_20190502_170324_17.jpg" alt="" /></a>
@@ -164,7 +167,7 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design">
+          <div class="col-md-4 col-sm-4 col-xs-12 book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/book/book_20190502_170324_19.jpg" alt="" /></a>
@@ -181,7 +184,7 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 photo development">
+          <div class="col-md-4 col-sm-4 col-xs-12 book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/book/book_20190502_170324_2.jpg" alt="" /></a>
@@ -198,7 +201,7 @@
           </div>
           <!-- single-awesome-project end -->
           <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 development">
+          <div class="col-md-4 col-sm-4 col-xs-12 book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/cool/cool_20190502_170324_10.jpg" alt="" /></a>
@@ -232,7 +235,7 @@
           </div>
           <!-- single-awesome-project end -->
             <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 etc book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/etc/etc_3.jpg" alt="" /></a>
@@ -249,7 +252,7 @@
           </div>
           <!-- single-awesome-project end -->
              <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 etc book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/photo/photo_2.jpg" alt="" /></a>
@@ -266,7 +269,7 @@
           </div>
           <!-- single-awesome-project end -->
             <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 design book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/etc/etc_4.jpg" alt="" /></a>
@@ -283,7 +286,7 @@
           </div>
           <!-- single-awesome-project end -->
             <!-- single-awesome-project start -->
-          <div class="col-md-4 col-sm-4 col-xs-12 design photo">
+          <div class="col-md-4 col-sm-4 col-xs-12 design book">
             <div class="single-awesome-project">
               <div class="awesome-img">
                 <a href="#"><img src="img/portfolio/photo/photo_1.jpg" alt="" /></a>
